slight change to last question

--- a/Week-01-Pandas/Exercise.ipynb
+++ b/Week-01-Pandas/Exercise.ipynb
@@ -539,20 +539,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22 12\n"
+      "2 1\n"
      ]
     }
    ],
    "source": [
     "# 3. How many awards was Kendrick Lamar nomiated for, and how many did he win...?\n",
-    "has_kendrick_lamar = (grammys['workers'].str.contains(\"Kendrick Lamar\", na=False)) | (grammys['nominee'].str.contains(\"Kendrick Lamar\", na=False))\n",
+    "has_kendrick_lamar = (grammys['nominee'].str.contains(\"Kendrick Lamar\", na=False))\n",
     "\n",
     "awards = grammys[has_kendrick_lamar]\n",
     "\n",
