--- a/Week-05-RandomForest/Exercise-RandomForests.ipynb
+++ b/Week-05-RandomForest/Exercise-RandomForests.ipynb
@@ -1004,19 +1004,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameters of best model: {'criterion': 'gini', 'max_depth': 100, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
+      "Parameters of best model: {'criterion': 'entropy', 'max_depth': 10, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
       "Accuracy Score: 0.909091\n",
       "Precision Score: 0.940000\n",
       "Recall Score: 0.886792\n",
       "F1 Score: 0.912621\n",
-      "AUC Score: 0.966981\n"
+      "AUC Score: 0.972313\n"
      ]
     }
    ],
@@ -1034,8 +1034,8 @@
     "# 1. Make a dictionary of at least 3 parameters and a list of 3 values for each for your grid search. \n",
     "params = {\n",
     "    'criterion' : ['gini', 'entropy'],\n",
-    "    'max_depth': [2, 5, 7, 100], \n",
-    "    'min_samples_split': [2, 10, 20, 100],\n",
+    "    'max_depth': [2, 5, 10, 15, 20, 30], \n",
+    "    'min_samples_split': [2, 5, 10],\n",
     "    'min_samples_leaf': [1, 10, 20, 30],\n",
     "         }\n",
     "\n",
